--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "interview",
   "version": "0.0.0",
   "scripts": {
-    "test": "gitbook build"
+    "test": "gitbook build source"
   },
   "devDependencies": {
     "gitbook-cli": "^1.0.0"
