--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "interview",
   "version": "0.0.0",
   "scripts": {
+    "pretest": "gitbook install source"
     "test": "gitbook build source"
   },
   "devDependencies": {
